--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/assets/maimtLogo.png" />
+
+    <link rel="icon" type="image" href="/maimtLogo.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MAIMT Library Management System</title>
   </head>
